--- a/test/test.html
+++ b/test/test.html
@@ -8,11 +8,14 @@
 <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
-    <script src="../vendor/qunit/qunit/qunit.js"></script>
+    <script src="../vendor/jquery/dist/jquery.js"></script>
     <script src="../vendor/underscore/underscore.js"></script>
     <script src="../vendor/backbone/backbone.js"></script>
-    <script src="../vendor/backbone-relational/backbone-relational.js"></script>
+    <!-- <script src="../vendor/backbone-relational/backbone-relational.js"></script> -->
+    <script src="../vendor/backbone-faux-server/backbone-faux-server.js"></script>
+    <script src="../vendor/qunit/qunit/qunit.js"></script>
     <script src="../backbone-localcache.js"></script>
+    <script src="faux-server.js"></script>
     <script src="test.js"></script>
 </body>
 </html>
