Use super statement

--- a/test/test-backbone.html
+++ b/test/test-backbone.html
@@ -11,6 +11,7 @@
     <script src="../vendor/jquery/dist/jquery.js"></script>
     <script src="../vendor/underscore/underscore.js"></script>
     <script src="../vendor/backbone/backbone.js"></script>
+    <script src="../vendor/backbone-super/backbone-super/backbone-super.js"></script>
     <script src="../vendor/backbone-faux-server/backbone-faux-server.js"></script>
     <script src="../vendor/qunit/qunit/qunit.js"></script>
     <script src="../backbone-localcache.js"></script>
