--- a/test/test-backbone-relational.html
+++ b/test/test-backbone-relational.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="utf-8">
     <title>Backbone LocalCache + Backbone Relational Tests</title>
-    <link rel="stylesheet" href="../vendor/qunit/qunit/qunit.css">
+    <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css">
 </head>
 <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
-    <script src="../vendor/jquery/dist/jquery.js"></script>
-    <script src="../vendor/underscore/underscore.js"></script>
-    <script src="../vendor/backbone/backbone.js"></script>
-    <script src="../vendor/backbone-relational/backbone-relational.js"></script>
-    <script src="../vendor/backbone-faux-server/backbone-faux-server.js"></script>
-    <script src="../vendor/qunit/qunit/qunit.js"></script>
-    <script src="../backbone-localcache.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/underscore/underscore.js"></script>
+    <script src="../bower_components/backbone/backbone.js"></script>
+    <script src="../bower_components/backbone-relational/backbone-relational.js"></script>
+    <script src="../bower_components/backbone-faux-server/backbone-faux-server.js"></script>
+    <script src="../bower_components/qunit/qunit/qunit.js"></script>
+    <script src="../backbone-local-cache.js"></script>
     <script src="faux-server.js"></script>
     <script src="test-backbone-relational.js"></script>
 </body>
